# TgAoigramBotSample

./: .env.sample  .gitignore  pyproject.toml
src/: __main__.py  config.py  loader.py
src/core/: env.py
src/handlers/: __init__.py  cmd_start.py
