[tool.poetry]
name = "telegaboostservice"
version = "0.1.0"
description = ""
authors = ["rainskin <homemadepunk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
pymongo = "^4.7.2"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
